POST /posts; update openapi spec
